--- a/public/index.html
+++ b/public/index.html
@@ -10,34 +10,72 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!--Bootstrap Css-->
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/bootstrap.min.css" />
+
+    <!-- Materialdesign icons Css -->
+    <link href="%PUBLIC_URL%/css/materialdesignicons.min.css" rel="stylesheet">
+
+    <!-- Mobirise icons Css -->
+    <link href="%PUBLIC_URL%/css/mobiriseicons.css" rel="stylesheet"> 
+
+    <!-- Magnific-popup -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
+
+    <!-- Animate Css -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/animate.min.css">
+
+    <!-- OWL SLIDER -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.carousel.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.theme.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/owl.transitions.css" />
+
+    <!-- Custom style Css -->
+    <link href="%PUBLIC_URL%/css/style.css" rel="stylesheet">
+    <link href="%PUBLIC_URL%/css/color/default.css" rel="stylesheet" id="option-color">
+
+    <title>James Tinker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- Loader -->
+    <div id="preloader">
+      <div id="status">
+          <div class="spinner">Loading...</div>
+      </div>
+    </div>
+
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- JAVASCRIPTS -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <!--EASING JS-->
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/scrollspy.min.js"></script>
+    <!--PORTFOLIO FILTER JS-->
+    <script src="js/isotope.js"></script>
+    <!-- Magnific Popup Js -->
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <!--TEXT ROTETE-->
+    <script src="js/jquery.simple-text-rotator.js"></script>
+    <!-- OWL CAROUSEL -->
+    <script src="js/owl.carousel.min.js"></script>
+    <!--PARTICLES ANIMATE JS-->
+    <script src="js/particles.js"></script>  
+    <script src="js/particles.app.js"></script> 
+    <!-- CONTACT JS -->
+    <script src="js/contact.js"></script>
+    <!--CUSTOM JS-->
+    <script src="js/custom.js"></script>
+    <script>
+        $(".simple-text-rotate").textrotator({
+            animation: "fade",
+            speed: 3500
+        });
+    </script>
   </body>
 </html>
