Resolve "Define Landing page elements"

--- a/public/index.html
+++ b/public/index.html
@@ -50,32 +50,26 @@
 
     <div id="root"></div>
 
+    <a href="#" class="back_top"> <i class="mdi mdi-chevron-up"> </i> </a>
+
     <!-- JAVASCRIPTS -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.min.js"></script>
+    <script src="%PUBLIC_URL%/js/bootstrap.bundle.min.js"></script>
     <!--EASING JS-->
-    <script src="js/jquery.easing.min.js"></script>
-    <script src="js/scrollspy.min.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.easing.min.js"></script>
+    <script src="%PUBLIC_URL%/js/scrollspy.min.js"></script>
     <!--PORTFOLIO FILTER JS-->
-    <script src="js/isotope.js"></script>
+    <script src="%PUBLIC_URL%/js/isotope.js"></script>
     <!-- Magnific Popup Js -->
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <!--TEXT ROTETE-->
-    <script src="js/jquery.simple-text-rotator.js"></script>
+    <script src="%PUBLIC_URL%/js/jquery.magnific-popup.min.js"></script>
     <!-- OWL CAROUSEL -->
-    <script src="js/owl.carousel.min.js"></script>
+    <script src="%PUBLIC_URL%/js/owl.carousel.min.js"></script>
     <!--PARTICLES ANIMATE JS-->
-    <script src="js/particles.js"></script>  
-    <script src="js/particles.app.js"></script> 
+    <script src="%PUBLIC_URL%/js/particles.js"></script>  
+    <script src="%PUBLIC_URL%/js/particles.app.js"></script> 
     <!-- CONTACT JS -->
-    <script src="js/contact.js"></script>
+    <script src="%PUBLIC_URL%/js/contact.js"></script>
     <!--CUSTOM JS-->
-    <script src="js/custom.js"></script>
-    <script>
-        $(".simple-text-rotate").textrotator({
-            animation: "fade",
-            speed: 3500
-        });
-    </script>
+    <script src="%PUBLIC_URL%/js/custom.js"></script>
   </body>
 </html>
